# term-utils

./: Cargo.toml  README.md  pyproject.toml
scripts/: install.sh
src/: fmt-num.rs  fmt-unicode.rs  grp-dir.rs  zip-dir.rs
